# Humanoid_rl

./: .gitignore  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/robot_action_msg/: robot_acts.h
devel/lib/humanoid_rl/: humanoid_rl_node
devel/lib/pkgconfig/: humanoid_rl.pc  robot_action_msg.pc
devel/lib/python3/dist-packages/robot_action_msg/msg/: __init__.py  _robot_acts.py
devel/share/common-lisp/ros/robot_action_msg/msg/: _package.lisp  _package_robot_acts.lisp  robot_action_msg-msg.asd  robot_acts.lisp
devel/share/gennodejs/ros/robot_action_msg/msg/: _index.js  robot_acts.js
devel/share/humanoid_rl/cmake/: humanoid_rlConfig.cmake
devel/share/robot_action_msg/cmake/: robot_action_msg-msg-paths.cmake  robot_action_msgConfig.cmake
devel/share/roseus/ros/robot_action_msg/: manifest.l
devel/share/roseus/ros/robot_action_msg/msg/: robot_acts.l
src/humanoid_rl/: CMakeLists.txt
src/humanoid_rl/config/: joint_config.yaml  origin_policy_config.yaml  policy_config.yaml
src/humanoid_rl/include/: body_control.h  humanoid_policy.h  humanoid_rl_inference.h  humanoid_state_machine.h
src/humanoid_rl/include/common_tools/: utils_common.cpp
src/humanoid_rl/include/common_tools/include/: utils_colorprint.hpp  utils_common.h  utils_logger.hpp  utils_serialization.hpp  version.h
src/humanoid_rl/launch/: on_policy.launch
src/humanoid_rl/src/: body_control.cpp  humanoid_policy.cpp  humanoid_rl_inference.cpp  humanoid_state_machine.cpp
